# gh-jj

./: .gitignore  Cargo.toml  LICENSE  flake.nix
.github/workflows/: release.yml
script/: build.sh
src/: main.rs
