[package]
name = "gh-jj"
version = "1.0.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
color-eyre = "0.6.5"
gh-config = "0.5.1"
octocrab = "0.44.1"
regex = "1.11.1"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = [
  "macros",
  "rt-multi-thread",
  "process",
  "io-util",
] }
